# ft-retrieval

./: .gitignore  README.md  pyproject.toml  results.txt
results/: custom_bm25_k20.json  custom_bm25_plus_k20.json  custom_cosine_k20.json  custom_financial_boost_k20.json  custom_language_model_k20.json  custom_tf_idf_k20.json  pyterrier_bm25_k20_rebuild_index_with_stopwords.json
src/: custom_retriever.py  evaluator.py  indexer.py  logger.py  main.py  query_processor.py  retrieval_playground.py  retriever.py  trec_data.py
tests/: test_all.sh
