[project]
name = "ft-retrieval"
version = "0.1.0"
description = "A Financial Times trec dataset retrieval algorithm"
authors = [
    {name = "Murat Bayraktar",email = "bayraktar.muraat@gmail.com"}
]
license = {text = "GNU General Public License"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "python-terrier (>=0.13.0,<0.14.0)",
    "rich (>=14.0.0,<15.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
